fix for nav scrolling overlap

--- a/css/styles.css
+++ b/css/styles.css
@@ -350,7 +350,6 @@ tr:nth-child(even) {
 .header.scrolled {
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.38);
     margin: 0;
-    padding: 0.5rem 2.2rem;
 }
 .burger-toggle {
     padding: .4rem;
@@ -1871,7 +1870,6 @@ ul.video-list {
         position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
         height: 8rem;
         padding: 1.5rem;
         z-index: 99;
